# SpeechRecognition

./: README.md
speechrecognition/: pyproject.toml
speechrecognition/speechrecognition/: SpeechRecognition.py
