[tool.poetry]
name = "speechrecognition"
version = "0.1.0"
description = ""
authors = ["Ylang <xfgf182@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SpeechRecognition = "^3.12.0" 
audioop-lts = "^0.2.1" 
numpy = "^2.2.0" 
pyaudio = "^0.2.14" 
pydub = "^0.25.1" 
pocketsphinx = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
